; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_regclass.c_fix_register.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_regclass.c_fix_register.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@STACK_POINTER_REGNUM = common dso_local global i32 0, align 4
@FRAME_POINTER_REGNUM = common dso_local global i32 0, align 4
@fix_register.what_option = internal constant [2 x [2 x i8*]] [[2 x i8*] [i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i32 0, i32 0)], [2 x i8*] [i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i32 0, i32 0)]], align 16
@.str = private unnamed_addr constant [11 x i8] c"call-saved\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"call-used\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"no-such-option\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"fixed\00", align 1
@.str.4 = private unnamed_addr constant [32 x i8] c"can't use '%s' as a %s register\00", align 1
@fixed_regs = common dso_local global i32* null, align 8
@call_used_regs = common dso_local global i32* null, align 8
@.str.5 = private unnamed_addr constant [26 x i8] c"unknown register name: %s\00", align 1
@HARD_FRAME_POINTER_REGNUM = common dso_local global i32 0, align 4
@call_really_used_regs = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @fix_register(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = call i32 @decode_reg_name(i8* %8)
  store i32 %9, i32* %7, align 4
  %10 = icmp sge i32 %9, 0
  br i1 %10, label %11, label %47

11:                                               ; preds = %3
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* @STACK_POINTER_REGNUM, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i32, i32* %7, align 4
  %17 = load i32, i32* @FRAME_POINTER_REGNUM, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %35

19:                                               ; preds = %15, %11
  %20 = load i32, i32* %5, align 4
  %21 = icmp eq i32 %20, 0
  br i1 %21, label %25, label %22

22:                                               ; preds = %19
  %23 = load i32, i32* %6, align 4
  %24 = icmp eq i32 %23, 0
  br i1 %24, label %25, label %35

25:                                               ; preds = %22, %19
  %26 = load i8*, i8** %4, align 8
  %27 = load i32, i32* %5, align 4
  %28 = sext i32 %27 to i64
  %29 = getelementptr inbounds [2 x [2 x i8*]], [2 x [2 x i8*]]* @fix_register.what_option, i64 0, i64 %28
  %30 = load i32, i32* %6, align 4
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds [2 x i8*], [2 x i8*]* %29, i64 0, i64 %31
  %33 = load i8*, i8** %32, align 8
  %34 = call i32 @error(i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i8* %26, i8* %33)
  br label %46

35:                                               ; preds = %22, %15
  %36 = load i32, i32* %5, align 4
  %37 = load i32*, i32** @fixed_regs, align 8
  %38 = load i32, i32* %7, align 4
  %39 = sext i32 %38 to i64
  %40 = getelementptr inbounds i32, i32* %37, i64 %39
  store i32 %36, i32* %40, align 4
  %41 = load i32, i32* %6, align 4
  %42 = load i32*, i32** @call_used_regs, align 8
  %43 = load i32, i32* %7, align 4
  %44 = sext i32 %43 to i64
  %45 = getelementptr inbounds i32, i32* %42, i64 %44
  store i32 %41, i32* %45, align 4
  br label %46

46:                                               ; preds = %35, %25
  br label %50

47:                                               ; preds = %3
  %48 = load i8*, i8** %4, align 8
  %49 = call i32 @warning(i32 0, i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0), i8* %48)
  br label %50

50:                                               ; preds = %47, %46
  ret void
}

declare dso_local i32 @decode_reg_name(i8*) #1

declare dso_local i32 @error(i8*, i8*, i8*) #1

declare dso_local i32 @warning(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
